--- a/account-prod.yaml
+++ b/account-prod.yaml
@@ -1,7 +1,7 @@
 build:
   version: 0.0.1-prod
 account:
-  message: 'Welcome to EazyBank Accounts Prod api'
+  message: 'Welcome to EazyBank Account Prod api with webhooks!'
   contactDetails:
     name: 'John Doe Prod support'
     email: 'p3sQc@example.com'
