--- a/card-prod.yaml
+++ b/card-prod.yaml
@@ -5,7 +5,7 @@ spring:
 build:
   version: 0.0.1-prod
 card:
-  message: 'Welcome to EazyBank Card Prod api'
+  message: 'Welcome to EazyBank Card Prod api with webhooks!'
   contactDetails:
     name: 'John Doe Prod support'
     email: 'p3sQc@example.com'
